# bps_to_omop

./: .gitignore  .pre-commit-config.yaml  .talismanrc  LICENSE  README.md  TODO.md  makefile  pyproject.toml
.pre-commit-hooks/: custom_pattern_check.py
bps_to_omop/: condition_occurrence.py  datasets.py  drug_exposure.py  extract.py  file_transformations.py  format_omop.py  general.py  location.py  mapping.py  measurement.py  observation_period.py  omop_schemas.py  person.py  procedure_occurrence.py  provider.py  pyarrow_utils.py  snippet_try_read_parameters.py  table_transformer.py  visit.py  visit_occurrence.py
docs/: 0_Introduction.ipynb  1_Guide_extract_apply_modifications.ipynb  3_Guide_omopization.ipynb  4_Guide_omop_CDM_SOURCE.ipynb  Guide_PERSON_table.ipynb  Guide_extract_apply_modifications.ipynb  Guide_omop_CDM_SOURCE.ipynb  Guide_omop_CONDITION_OCCURRENCE.ipynb  Guide_omop_MEASUREMENT.ipynb  Guide_omop_OBSERVATION_PERIOD.ipynb  Guide_omop_PERSON.ipynb  Guide_omop_PROVIDER.ipynb  Guide_omop_VISIT_OCCURRENCE.ipynb  Guide_omopization.ipynb  N_Guide_LOCATION.ipynb  N_Guide_omop_COHORT.ipynb  N_Guide_omop_CONDITION_OCCURRENCE.ipynb  N_Guide_omop_DEATH.ipynb  N_Guide_omop_DRUG_EXPOSURE.ipynb  N_Guide_omop_MEASUREMENT.ipynb  N_Guide_omop_PERSON.ipynb  N_Guide_omop_PROCEDURE_OCCURRENCE.ipynb  N_Guide_omop_PROVIDER.ipynb  N_Guide_omop_VISIT_OCCURRENCE.ipynb  Ref_NotasPostgreSQL.ipynb  TestsWithSynthBPS.ipynb  UsingPyarrow.ipynb  date_grouping_revisited.ipynb  find_date_ranges_revisited.ipynb
examples/: genomop_cdm_source.py  genomop_cdm_source_params.yaml  (+21 more)
(+39 files in other folders)
